v3.1.4:
  - cbox format from cryolo implemented to import 3d coordinates
  - hide transform matrix column for TS movies
  - fix CTF viewer help (close #253)
  - change TS flags
  - Added an option to import the dose accumulation using a tlt file as second column

v3.1.3:
 users:
  - Tutorials templates renamed
  - LandMarkModel shows Å not pixels in its description
 developers:
  - Subtomogram getTransform returns its contained transform if non convention is passed
  - Transformation subtomo test labels improved
  - tomo-em dataset definition: 3 trams added
  - TestImportTomoMasks: output names fixed
  - Fixes in import coordinates from Scipion (sqlite)

V3.1.2:
  - HIV STA Template not using 16 bit mrc
V3.1.1:
  - Templates folder added for packaging
v3.1.0:
  - First plugin release.See README.rst for more details
  - Tomography 2022 course: 5 templates added. Need You'll need to download its dataset -> scipion3 testdata --download tomo-tutorial