@@ -4,6 +4,9 @@ v3.1.4:
   - fix CTF viewer help (close #253)
   - change TS flags
   - Added an option to import the dose accumulation using a tlt file as second column
+  - Fix: uses subsets of representatives are more accurate and not always SetOfVolumes
+  - Fix: Single import of a numeric tilt series
+  - Template for HIV STA improved
 
 v3.1.3:
  users:
